fix collapse btn rotate when click

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -455,6 +455,18 @@ body {
   background-color: var(--bright-gray-4-color);
 }
 
+.sidebar__collapse img {
+  -webkit-transform: rotate(0);
+          transform: rotate(0);
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+.sidebar__collapse.hide img {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
 .sidebar .submenu {
   -webkit-box-flex: 1;
       -ms-flex: 1;
