--- a/assets/styles/partials/_sidebar.scss
+++ b/assets/styles/partials/_sidebar.scss
@@ -138,6 +138,17 @@
         &:hover{
             background-color: var(--bright-gray-4-color);
         }
+
+        & img{
+            transform: rotate(0);
+            transition: all .3s ease;
+        }
+
+        &.hide{
+            & img{
+                transform: rotate(180deg)
+            }
+        }
     }
     .submenu{
         flex: 1;
